# glsync

./: CMakeLists.txt  Doxyfile  Makefile  README.md
examples/: CMakeLists.txt  dlsymhook.c  fps.c  ldinfo.c  sync.c
src/: CMakeLists.txt  elfhacks.c  elfhacks.h
src/examples/: dlsymhook.c  ldinfo.c
