
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/src)

ADD_LIBRARY(glsync SHARED sync.c)
TARGET_LINK_LIBRARIES(glsync elfhacks)

ADD_LIBRARY(glsync32 SHARED sync.c)
TARGET_LINK_LIBRARIES(glsync32 elfhacks32)
SET_TARGET_PROPERTIES(glsync32 PROPERTIES
                      COMPILE_FLAGS "-m32 -fPIC"
                      LINK_FLAGS "-m32")
