SET(ELFHACKS_SRC elfhacks.h elfhacks.c)

IF (UNIX)
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fvisibility=hidden")
ENDIF (UNIX)

ADD_LIBRARY(elfhacks SHARED ${ELFHACKS_SRC})
ADD_LIBRARY(elfhacks32 SHARED ${ELFHACKS_SRC})

SET_TARGET_PROPERTIES(elfhacks PROPERTIES
		      OUTPUT_NAME elfhacks
		      VERSION ${ELFHACKS_VER}
		      SOVERSION ${ELFHACKS_SOVER})

SET_TARGET_PROPERTIES(elfhacks32 PROPERTIES
		      OUTPUT_NAME elfhacks32
		      VERSION ${ELFHACKS_VER}
		      SOVERSION ${ELFHACKS_SOVER}
		      COMPILE_FLAGS "-m32"
		      LINK_FLAGS "-m32")

IF (UNIX)
  IF (NOT MLIBDIR)
    SET(MLIBDIR "lib")
  ENDIF (NOT MLIBDIR)

  IF (NOT MLIBDIR32)
    SET(MLIBDIR32 "lib32")
  ENDIF (NOT MLIBDIR32)

  INSTALL(TARGETS elfhacks
  	  LIBRARY DESTINATION ${MLIBDIR})
  INSTALL(TARGETS elfhacks32
  	  LIBRARY DESTINATION ${MLIBDIR32})

  INSTALL(FILES elfhacks.h DESTINATION include)
ENDIF (UNIX)
